# aria-ai

./: .gitignore  CURRENT_TASK.md  DEVELOPMENT_ROADMAP.md  GAP_AUDIT.md  checkup.sh  error-registry.md  migration.md  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  stubs.md  what's left.md
.agents/: agent_assets_metadata.toml
.github/workflows/: build-android.yml
.idx/: dev.nix
android/: PUSH_LOG.md  build.gradle  gradle.properties  settings.gradle
android/.github/workflows/: build-android.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  FindOpenCL.cmake  jni_bridge.cpp  llama_jni.cpp
android/docs/: ARIA_REALITY_CHECK.md  ui-backend-audit.md
artifacts/aria-dashboard/: index.html  package.json
artifacts/aria-dashboard/.replit-artifact/: artifact.toml
artifacts/aria-dashboard/src/: App.tsx  index.css
artifacts/mobile/: .gitignore  FIREBASE_STUDIO.md  app.json  babel.config.js  eas.json  metro.config.js  migration.md  package.json
artifacts/mobile/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
artifacts/mobile/android/app/src/main/cpp/: CMakeLists.txt  aria_math.cpp  llama_jni.cpp
artifacts/mobile/app/: _layout.tsx  labeler.tsx
artifacts/mobile/components/: KeyboardAwareScrollViewCompat.tsx
artifacts/web-dashboard/: package.json  vite.config.ts
attached_assets/: 0_Build_Debug_APK_1775407940531.txt  0_Build_Debug_APK_1775481532832.txt  0_Build_Debug_APK_1775483245806.txt  0_Build_Debug_APK_1775484605424.txt  0_Build_Debug_APK_1775485846371.txt  0_Build_Debug_APK_1775486763657.txt  0_Build_Debug_APK_1775487339717.txt  0_Build_Debug_APK_1775492381629.txt  0_Build_Debug_APK_1775494582259.txt  10_Build_debug_APK_(native-only_mode)_1775406683326.txt  10_Build_debug_APK_(native-only_mode)_1775407711680.txt  10_Build_debug_APK_(native-only_mode)_1775441711129.txt  10_Build_debug_APK_(native-only_mode)_1775485846433.txt  10_Install_Vulkan_HPP_headers_1775486763722.txt  10_Install_Vulkan_HPP_headers_1775487339838.txt  10_Install_Vulkan_HPP_headers_1775489282917.txt  10_Install_Vulkan_HPP_headers_and_glslc_1775492561308.txt  11_Build_debug_APK_(native-only_mode)_1775486763779.txt  11_Build_debug_APK_(native-only_mode)_1775487339915.txt  11_Build_debug_APK_(native-only_mode)_1775489282980.txt  1_Analyze_(java-kotlin)_1775447014315.txt  1_Set_up_job_1775489282830.txt  23_Post_Set_up_JDK_17_1775489283099.txt  24_Post_Checkout_code_1775489283159.txt  25_Complete_job_1775489283224.txt  2_Checkout_code_1775489283033.txt  3_Set_up_JDK_17_1775489283288.txt  4_Set_up_Android_SDK_1775489283355.txt  5_Install_NDK_1775489283423.txt  6_Analyze_(javascript-typescript)_1775447000213.txt  6_Create_local.properties_1775489283486.txt  7_Cache_Gradle_packages_1775486763867.txt  7_Cache_Gradle_packages_1775487339983.txt  7_Cache_Gradle_packages_1775489283546.txt  8_Cache_NDK_build_outputs_1775486763930.txt  8_Cache_NDK_build_outputs_1775487340141.txt  8_Cache_NDK_build_outputs_1775489283604.txt  9_Make_gradlew_executable_1775489283690.txt  system_1775489283753.txt  textfile_(2)_1775293937746.txt  (+2 more)
checkup/: .npmrc  ARIAComposeApp.kt  ASSESSMENT.md  ActivityLog.tsx  ActivityScreen.kt  AgentCoreModule.kt  AgentViewModel.kt  AndroidManifest.xml  CMakeLists.txt  DEVELOPMENT_ROADMAP.md  EmbeddingEngine.kt  EmbeddingModelManager.kt  ExpoModulesPackageList.kt  FILE_INDEX.txt  FloatingChatBubble.tsx  GestureEngine.kt  IrlModule.kt  LlmRewardEnricher.kt  LoraVersions.tsx  MetricCard.tsx  ModelDownloadScreen.tsx  ModelDownloadService.kt  ModuleRow.tsx  NativeAgentCore.ts  Overview.tsx  ScreenCaptureService.kt  SettingsScreen.kt  StatusPill.tsx  ThermalBadge.tsx  ThermalGuard.kt  agent.ts  app.json  artifact.toml  artifacts__mobile__android__build.gradle  artifacts__mobile__app__(tabs)___layout.tsx  artifacts__web-dashboard__src__index.css  artifacts__web-dashboard__vite.config.ts  build.gradle  checkup.sh  colors.ts  (+23 more)
checkup/artifacts/mobile/: babel.config.js  eas.json  metro.config.js  package.json
checkup/artifacts/mobile/android/app/src/main/cpp/: llama_jni.cpp
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/: MainApplication.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/core/ai/: PromptBuilder.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/core/ocr/: OcrEngine.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/core/perception/: ObjectDetectorEngine.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/core/rl/: LearningScheduler.kt  LoraTrainer.kt  PolicyNetwork.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/system/: AgentForegroundService.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/system/accessibility/: AgentAccessibilityService.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/ui/screens/: ModulesScreen.kt
checkup/artifacts/mobile/android/app/src/main/kotlin/com/ariaagent/mobile/ui/theme/: ARIATheme.kt
checkup/artifacts/mobile/android/app/src/main/res/values/: styles.xml
checkup/artifacts/mobile/app/: _layout.tsx  labeler.tsx
checkup/artifacts/mobile/app/(tabs)/: control.tsx
checkup/artifacts/mobile/components/: SectionHeader.tsx  StatusDot.tsx
checkup/artifacts/mobile/native-bindings/: AgentCoreBridge.ts
checkup/artifacts/mobile/scripts/: eas-pre-install.sh
checkup/artifacts/web-dashboard/: index.html  package.json
checkup/artifacts/web-dashboard/src/: main.tsx
checkup/artifacts/web-dashboard/src/hooks/: usePolling.ts
checkup/attached_assets/: textfile_(3)_1775290277123.txt  textfile_(3)_1775311787502.txt  textfile_1775291085628.txt
checkup/ocr/: OcrEngine.kt
checkup/shared/schemas/: package.json
checkup/shared/schemas/src/: index.ts
core/: CMakeLists.txt
core/include/: aria_c_api.h
core/src/: aria_engine.cpp  aria_math_arm.c  aria_math_scalar.c  aria_math_x86.c
docs/: 07_BUILD_AND_INSTALL.md  MULTIPLATFORM_PLAN.md
(+95 files in other folders)
